# MUSICA

.github/workflows/: release.yml
branch/main/: genindex.html  index.html  search.html
branch/main/.doctrees/: environment.pickle
branch/main/api/: index.html
branch/main/contributing/: index.html
branch/main/getting_started/: getting_started.html  installation.html  overview.html
branch/main/tutorial/: chapter0.html  chapter1.html  chapter2.html  tutorial.html
branch/main/user_guide/: fortran_c.html  model_interface.html  user_guide.html
fortran/test/fetch_content_integration/: CMakeLists.txt  test_photolysis_mapping.F90
fortran/test/integration/: CMakeLists.txt
include/musica/: micm.hpp  util.hpp
include/musica/tuvx/: tuvx.hpp
python/: box_model.py  fit_to_experiments.py  interfaces.py  melodies.py  micm_test.py  music_box.py
src/: util.cpp
src/micm/: micm.cpp
src/test/: CMakeLists.txt
src/test/integration/: CMakeLists.txt  test_photolysis_mapping.cpp
src/test/unit/micm/: micm_c_api.cpp
src/test/unit/tuvx/: tuvx_c_api.cpp
src/tuvx/: tuvx.cpp
